try z-index fix

--- a/styles.css
+++ b/styles.css
@@ -311,6 +311,9 @@ Calendars
     text-align: center;
     overflow-x: scroll;
 }
+.calendarWrapper iframe {
+    z-index: 1;
+}
 /* ------- 
 Video Background 
 --------- */
